kubernetes/apps/.resources/resources/pgadmin/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Script-Name /${namespace};
spec:
  ingressClassName: nginx
  rules:
    - host: pgadmin.lan.tablar.ovh
      http:
        paths:
          - path: /${namespace}(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 5050
  tls:
    - hosts:
        - pgadmin.lan.tablar.ovh
